# python-workout

./: .gitignore  README.md  pyproject.toml
exercise-1/: get-words.py  guessing-game-3-tries.py  guessing_game_random_base.py  guessing_game_words.py
exercise_1/: guessing_game.py  short_words.txt
