[tool.poetry]
name = "python-workout"
version = "0.1.0"
description = "Exercises from the Python Workout book"
authors = ["jpostula <jpostula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
